      build-profile to "nocheck".  (Closes: #743840)
  * checks/init.d.{desc,pm}:
    + [BR] Detect $all virtual dependency in legacy init scripts.
      Thanks to Holger Levsen (Closes: #737867).
  * checks/java.{desc,pm}:
    + [SL] Do not trigger a warning when a jar is not in
      /usr/share/java and the package name matches
      lib.*maven.*plugin.*java.

 -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 31 Mar 2014 18:52:04 +0200

lintian (2.5.22.1) unstable; urgency=medium

  * checks/ocaml.{desc,pm}:
    + [NT] Replace unnecessary uses of file_info with index.

  * data/binary/embedded-libs:
    + [RG] Detect embedded copies of libmpg123.
  * data/fields/perl-provides:
    + [NT] Refresh against Perl 5.18.2.
  * data/spelling/corrections:
    + [RG] Add "functiosn" to the list of spelling mistakes.

  * frontend/lintian:
    + [NT] Fix a regression that completely broke the
      command-line argument "--packages-from-file", when
      the file was "-".

  * lib/Lintian/Relation.pm:
    + [JW,NT] Fix dependency-testing issues caused by too
      greedy regular expressions in the dependency parser.
      (Closes: #742989)

  * reporting/templates/tags.tmpl:
    + [JW,NT] Fix grammatical error in a template.
      (Closes: #742985)

 -- Niels Thykier <niels@thykier.net>  Sun, 30 Mar 2014 20:55:52 +0200

lintian (2.5.22) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - invalid-restriction-label-in-source-relation
      - invalid-restriction-namespace-in-source-relation
      - invalid-restriction-term-in-source-relation
      - license-problem-gfdl-non-official-text
      - license-problem-non-free-RFC-BCP78
      - privacy-breach-google-plus
      - privacy-breach-twitter
      - restriction-list-with-debhelper-with-conflicting-debhelper-version
      - restriction-list-with-debhelper-without-debhelper-version
      - restriction-list-with-versioned-dpkg-dev-conflict